--- a/Pain_Detection.ipynb
+++ b/Pain_Detection.ipynb
@@ -228,7 +228,7 @@
         "learning_rate = 0.0001\n",
         "class NN(nn.Module):\n",
         "    def __init__(self):\n",
-        "        super(NN3, self).__init__()\n",
+        "        super(NN, self).__init__()\n",
         "        self.layer1 = nn.Sequential(\n",
         "        nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
@@ -367,7 +367,7 @@
         "id": "1sl_1dWQ7a-E"
       },
       "source": [
-        "torch.save(model.state_dict(), './pain_detection_nn.pth')"
+        "torch.save(model.state_dict(), \"./pain_detection_nn.pth\")"
       ],
       "execution_count": null,
       "outputs": []
